--- a/Linear Regression/houses .ipynb
+++ b/Linear Regression/houses .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ceec815d",
+   "id": "9d903aed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4fe81a86",
+   "id": "58cfeed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5d3c9c06",
+   "id": "b94565d7",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "03f64b5a",
+   "id": "57e50de7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "525aaa4f",
+   "id": "fd9329a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1657d146",
+   "id": "cb6afacf",
    "metadata": {},
    "outputs": [
     {
@@ -242,14 +242,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18a2e2c7",
+   "execution_count": 7,
+   "id": "5e8d5364",
    "metadata": {},
    "outputs": [],
    "source": [
     "new_data=pd.DataFrame({'size':[1800]})\n",
-    "predicted_price=model.predict(new_data)[0]"
+    "predicted_price=model.predict(new_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "432280dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([302.91132763])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5b27652b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted price: $ 302.91 k\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Predicted price: $', round(predicted_price[0], 2), 'k')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09694c70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
