Principal Component Analysis

--- a/Linear Regression/houses .ipynb
+++ b/Linear Regression/houses .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9d903aed",
+   "id": "b8abde43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "58cfeed4",
+   "id": "aabe02c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b94565d7",
+   "id": "126177eb",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "57e50de7",
+   "id": "261cdc65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fd9329a9",
+   "id": "fa718d48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb6afacf",
+   "id": "38a9eec1",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5e8d5364",
+   "id": "0991d0e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "432280dd",
+   "id": "cb2eea3a",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5b27652b",
+   "id": "9f9e8f82",
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +292,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "a764390e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### multiple linear regreession"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "644a364e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Use multiple linear regression to build a model to predict blood pressure based on age, height, and weight. Find the equation of the line of best fit and use it to predict the blood pressure of a 40-year-old, 70-inch tall individual weighing 180 pounds."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "09694c70",
+   "id": "f2c9b5f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "318fbe7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyreadstat\n",
+      "  Downloading pyreadstat-1.2.1-cp310-cp310-win_amd64.whl (2.4 MB)\n",
+      "     ---------------------------------------- 2.4/2.4 MB 2.3 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: pandas>=1.2.0 in c:\\users\\hrmwe\\anaconda3\\lib\\site-packages (from pyreadstat) (1.5.3)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\hrmwe\\anaconda3\\lib\\site-packages (from pandas>=1.2.0->pyreadstat) (1.23.5)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\hrmwe\\anaconda3\\lib\\site-packages (from pandas>=1.2.0->pyreadstat) (2022.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\hrmwe\\anaconda3\\lib\\site-packages (from pandas>=1.2.0->pyreadstat) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\hrmwe\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas>=1.2.0->pyreadstat) (1.16.0)\n",
+      "Installing collected packages: pyreadstat\n",
+      "Successfully installed pyreadstat-1.2.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pyreadstat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e2f5a66d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PyreadstatError",
+     "evalue": "File path/to/nhanes_data.dxa does not exist!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPyreadstatError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyreadstat\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Load NHANES data from SAS transport file\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m data, meta \u001b[38;5;241m=\u001b[39m \u001b[43mpyreadstat\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_sas7bdat\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpath/to/nhanes_data.dxa\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Extract blood pressure variables from data\u001b[39;00m\n\u001b[0;32m      7\u001b[0m systolic_bp \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBPXSY1\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[1;32mpyreadstat\\pyreadstat.pyx:127\u001b[0m, in \u001b[0;36mpyreadstat.pyreadstat.read_sas7bdat\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpyreadstat\\_readstat_parser.pyx:1066\u001b[0m, in \u001b[0;36mpyreadstat._readstat_parser.run_conversion\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mPyreadstatError\u001b[0m: File path/to/nhanes_data.dxa does not exist!"
+     ]
+    }
+   ],
+   "source": [
+    "import pyreadstat\n",
+    "\n",
+    "# Load NHANES data from SAS transport file\n",
+    "data, meta = pyreadstat.read_sas7bdat('path/to/nhanes_data.dxa')\n",
+    "\n",
+    "# Extract blood pressure variables from data\n",
+    "systolic_bp = data['BPXSY1']\n",
+    "diastolic_bp = data['BPXDI1']\n",
+    "\n",
+    "# Do some analysis with the blood pressure data...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b2f7ed0",
    "metadata": {},
    "outputs": [],
    "source": []
